--- a/.github/workflows/lede.yml
+++ b/.github/workflows/lede.yml
@@ -69,14 +69,14 @@ jobs:
     - name: 常用配置修改
       run: |
         cd lede
-        git clone https://github.com/gd0772/package package/gd772
-        git clone https://github.com/kenzok8/small package/gd772/passwall
-        rm -rf package/gd772/passwall/luci-app-passwall2 package/gd772/passwall/luci-app-ssr-plus package/gd772/passwall/luci-app-bypass
-        git clone https://github.com/fw876/helloworld package/gd772/ssrplus
+        git clone https://github.com/kenzok8/openwrt-packages package/zheng
+        git clone https://github.com/kenzok8/small package/zheng/passwall
+        rm -rf package/zheng/passwall/luci-app-passwall2 package/zheng/passwall/luci-app-ssr-plus package/zheng/passwall/luci-app-bypass
+        git clone https://github.com/fw876/helloworld package/zheng/ssrplus
         rm -rf ./feeds/luci/applications/luci-app-netdata
         git clone https://github.com/Jason6111/luci-app-netdata ./feeds/luci/applications/luci-app-netdata/
         sed -i "s/192.168.1.1/192.168.2.3/g" package/base-files/files/bin/config_generate
-        sed -i 's/ShadowSocksR Plus+/SSR Plus+/g' package/gd772/ssrplus/luci-app-ssr-plus/luasrc/controller/shadowsocksr.lua
+        sed -i 's/ShadowSocksR Plus+/SSR Plus+/g' package/zheng/ssrplus/luci-app-ssr-plus/luasrc/controller/shadowsocksr.lua
         sed -i 's/TTYD 终端/命令行/g' feeds/luci/applications/luci-app-ttyd/po/zh-cn/terminal.po
         sed -i 's/Turbo ACC 网络加速/网络加速/g' feeds/luci/applications/luci-app-turboacc/po/zh-cn/turboacc.po
   
@@ -89,7 +89,6 @@ jobs:
         CONFIG_TARGET_x86=y
         CONFIG_TARGET_x86_64=y
         CONFIG_TARGET_x86_64_DEVICE_generic=y
-        # CONFIG_GRUB_EFI_IMAGES is not set
         CONFIG_GRUB_IMAGES=y
         CONFIG_PACKAGE_bash=y
         CONFIG_PACKAGE_blkid=y
@@ -99,8 +98,6 @@ jobs:
         CONFIG_PACKAGE_coreutils-nohup=y
         CONFIG_PACKAGE_coreutils-timeout=y
         # CONFIG_PACKAGE_etherwake is not set
-        # CONFIG_PACKAGE_grub2-bios-setup is not set
-        # CONFIG_PACKAGE_grub2-efi is not set
         CONFIG_PACKAGE_haproxy=y
         CONFIG_PACKAGE_ipt2socks=y
         CONFIG_PACKAGE_iptables-mod-conntrack-extra=y
@@ -111,6 +108,7 @@ jobs:
         CONFIG_PACKAGE_kmod-ipt-iprange=y
         CONFIG_PACKAGE_kmod-ipt-socket=y
         CONFIG_PACKAGE_kmod-netlink-diag=y
+        # CONFIG_PACKAGE_kmod-nf-conntrack-netlink is not set
         CONFIG_PACKAGE_kmod-nf-socket=y
         CONFIG_PACKAGE_libcap-bin=y
         CONFIG_PACKAGE_libcap-bin-capsh-shell="/bin/sh"
@@ -123,11 +121,13 @@ jobs:
         CONFIG_PACKAGE_libwebsockets-full=y
         CONFIG_PACKAGE_libyaml=y
         # CONFIG_PACKAGE_luci-app-accesscontrol is not set
+        # CONFIG_PACKAGE_luci-app-adguardhome_INCLUDE_binary is not set
         # CONFIG_PACKAGE_luci-app-arpbind is not set
         # CONFIG_PACKAGE_luci-app-autoreboot is not set
         # CONFIG_PACKAGE_luci-app-ddns is not set
         CONFIG_PACKAGE_luci-app-diskman=y
         CONFIG_PACKAGE_luci-app-netdata=y
+        # CONFIG_PACKAGE_luci-app-nlbwmon is not set
         CONFIG_PACKAGE_luci-app-openclash=y
         CONFIG_PACKAGE_luci-app-passwall=y
         CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Haproxy=y
@@ -140,8 +140,10 @@ jobs:
         CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray_Plugin=y
         CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Xray=y
         CONFIG_PACKAGE_luci-app-passwall_Iptables_Transparent_Proxy=y
-        CONFIG_PACKAGE_luci-app-smartdns=y
+        # CONFIG_PACKAGE_luci-app-rclone_INCLUDE_rclone-ng is not set
+        # CONFIG_PACKAGE_luci-app-rclone_INCLUDE_rclone-webui is not set
         CONFIG_PACKAGE_luci-app-ttyd=y
+        # CONFIG_PACKAGE_luci-app-unblockmusic_INCLUDE_UnblockNeteaseMusic_Go is not set
         # CONFIG_PACKAGE_luci-app-upnp is not set
         # CONFIG_PACKAGE_luci-app-vlmcsd is not set
         # CONFIG_PACKAGE_luci-app-vsftpd is not set
@@ -149,11 +151,11 @@ jobs:
         CONFIG_PACKAGE_luci-i18n-diskman-zh-cn=y
         CONFIG_PACKAGE_luci-i18n-netdata-zh-cn=y
         CONFIG_PACKAGE_luci-i18n-passwall-zh-cn=y
-        CONFIG_PACKAGE_luci-i18n-smartdns-zh-cn=y
         CONFIG_PACKAGE_luci-i18n-ttyd-zh-cn=y
-        CONFIG_PACKAGE_luci-theme-atmaterial=y
+        CONFIG_PACKAGE_luci-theme-atmaterial_new=y
         # CONFIG_PACKAGE_miniupnpd is not set
         CONFIG_PACKAGE_netdata=y
+        # CONFIG_PACKAGE_nlbwmon is not set
         CONFIG_PACKAGE_parted=y
         CONFIG_PACKAGE_ruby=y
         CONFIG_PACKAGE_ruby-bigdecimal=y
@@ -169,7 +171,6 @@ jobs:
         CONFIG_PACKAGE_shadowsocks-libev-ss-local=y
         CONFIG_PACKAGE_shadowsocks-libev-ss-redir=y
         CONFIG_PACKAGE_sing-box=y
-        CONFIG_PACKAGE_smartdns=y
         CONFIG_PACKAGE_smartmontools=y
         CONFIG_PACKAGE_trojan-plus=y
         CONFIG_PACKAGE_ttyd=y
@@ -186,9 +187,10 @@ jobs:
         CONFIG_SING_BOX_WITH_QUIC=y
         CONFIG_SING_BOX_WITH_UTLS=y
         CONFIG_SING_BOX_WITH_WIREGUARD=y
+        # CONFIG_TARGET_IMAGES_GZIP is not set
         CONFIG_TARGET_KERNEL_PARTSIZE=200
         CONFIG_TARGET_ROOTFS_PARTSIZE=700
-        CONFIG_TARGET_ROOTFS_TARGZ=y
+        # CONFIG_VMDK_IMAGES is not set
         CONFIG_boost-compile-visibility-hidden=y
         CONFIG_boost-runtime-shared=y
         CONFIG_boost-static-and-shared-libs=y
@@ -214,4 +216,4 @@ jobs:
       uses: actions/upload-artifact@main
       with:
         name: OpenWrt
-        path: lede/bin/targets/
+        path: lede/bin/targets/x86/64/*.img
