--- a/.github/workflows/lede.yml
+++ b/.github/workflows/lede.yml
@@ -73,12 +73,9 @@ jobs:
         git clone https://github.com/kenzok8/small package/zheng/passwall
         rm -rf package/zheng/passwall/luci-app-passwall2 package/zheng/passwall/luci-app-ssr-plus package/zheng/passwall/luci-app-bypass
         git clone https://github.com/fw876/helloworld package/zheng/ssrplus
-        rm -rf ./feeds/luci/applications/luci-app-netdata
-        git clone https://github.com/Jason6111/luci-app-netdata ./feeds/luci/applications/luci-app-netdata/
         sed -i "s/192.168.1.1/192.168.2.3/g" package/base-files/files/bin/config_generate
         sed -i 's/ShadowSocksR Plus+/SSR Plus+/g' package/zheng/ssrplus/luci-app-ssr-plus/luasrc/controller/shadowsocksr.lua
         sed -i 's/TTYD 终端/命令行/g' feeds/luci/applications/luci-app-ttyd/po/zh-cn/terminal.po
-        sed -i 's/Turbo ACC 网络加速/网络加速/g' feeds/luci/applications/luci-app-turboacc/po/zh-cn/turboacc.po
   
     - name: 配置固件文件
       run: |
@@ -89,48 +86,105 @@ jobs:
         CONFIG_TARGET_x86=y
         CONFIG_TARGET_x86_64=y
         CONFIG_TARGET_x86_64_DEVICE_generic=y
+        CONFIG_CGROUPFS_MOUNT_KERNEL_CGROUPS=y
+        CONFIG_DOCKER_CGROUP_OPTIONS=y
+        CONFIG_DOCKER_NET_MACVLAN=y
+        CONFIG_DOCKER_OPTIONAL_FEATURES=y
+        CONFIG_DOCKER_STO_EXT4=y
+        # CONFIG_GRUB_EFI_IMAGES is not set
         CONFIG_GRUB_IMAGES=y
+        CONFIG_KERNEL_CFQ_GROUP_IOSCHED=y
+        CONFIG_KERNEL_CGROUP_DEVICE=y
+        CONFIG_KERNEL_CGROUP_FREEZER=y
+        CONFIG_KERNEL_CGROUP_HUGETLB=y
+        CONFIG_KERNEL_CGROUP_NET_PRIO=y
+        CONFIG_KERNEL_CGROUP_PERF=y
+        CONFIG_KERNEL_HUGETLBFS=y
+        CONFIG_KERNEL_HUGETLB_PAGE=y
+        CONFIG_KERNEL_MEMCG_SWAP_ENABLED=y
+        CONFIG_KERNEL_NET_CLS_CGROUP=y
+        CONFIG_KERNEL_PERF_EVENTS=y
+        CONFIG_KERNEL_TRANSPARENT_HUGEPAGE=y
+        CONFIG_KERNEL_TRANSPARENT_HUGEPAGE_ALWAYS=y
+        CONFIG_OPENSSH_LIBFIDO2=y
+        # CONFIG_PACKAGE_TURBOACC_INCLUDE_BBR_CCA is not set
+        CONFIG_PACKAGE_autossh=y
+        CONFIG_PACKAGE_avahi-dbus-daemon=y
         CONFIG_PACKAGE_bash=y
         CONFIG_PACKAGE_blkid=y
         CONFIG_PACKAGE_boost=y
         CONFIG_PACKAGE_boost-program_options=y
         CONFIG_PACKAGE_boost-system=y
+        CONFIG_PACKAGE_btrfs-progs=y
+        CONFIG_PACKAGE_cgroupfs-mount=y
+        CONFIG_PACKAGE_chinadns-ng=y
+        CONFIG_PACKAGE_containerd=y
         CONFIG_PACKAGE_coreutils-nohup=y
-        CONFIG_PACKAGE_coreutils-timeout=y
+        CONFIG_PACKAGE_dbus=y
+        CONFIG_PACKAGE_docker=y
+        CONFIG_PACKAGE_docker-compose=y
+        CONFIG_PACKAGE_dockerd=y
         # CONFIG_PACKAGE_etherwake is not set
+        # CONFIG_PACKAGE_grub2-efi is not set
         CONFIG_PACKAGE_haproxy=y
+        CONFIG_PACKAGE_hysteria=y
         CONFIG_PACKAGE_ipt2socks=y
-        CONFIG_PACKAGE_iptables-mod-conntrack-extra=y
-        CONFIG_PACKAGE_iptables-mod-iprange=y
-        CONFIG_PACKAGE_iptables-mod-socket=y
+        CONFIG_PACKAGE_kmod-br-netfilter=y
+        CONFIG_PACKAGE_kmod-crypto-acompress=y
+        CONFIG_PACKAGE_kmod-dummy=y
+        CONFIG_PACKAGE_kmod-fs-btrfs=y
         CONFIG_PACKAGE_kmod-inet-diag=y
-        CONFIG_PACKAGE_kmod-ipt-conntrack-extra=y
-        CONFIG_PACKAGE_kmod-ipt-iprange=y
-        CONFIG_PACKAGE_kmod-ipt-socket=y
+        # CONFIG_PACKAGE_kmod-ipt-offload is not set
+        CONFIG_PACKAGE_kmod-ipt-physdev=y
+        CONFIG_PACKAGE_kmod-lib-lzo=y
+        CONFIG_PACKAGE_kmod-lib-raid6=y
+        CONFIG_PACKAGE_kmod-lib-xor=y
+        CONFIG_PACKAGE_kmod-lib-zlib-deflate=y
+        CONFIG_PACKAGE_kmod-lib-zstd=y
         CONFIG_PACKAGE_kmod-netlink-diag=y
         # CONFIG_PACKAGE_kmod-nf-conntrack-netlink is not set
-        CONFIG_PACKAGE_kmod-nf-socket=y
+        # CONFIG_PACKAGE_kmod-nf-flow is not set
+        CONFIG_PACKAGE_kmod-nf-ipvs=y
+        # CONFIG_PACKAGE_kmod-tcp-bbr is not set
+        CONFIG_PACKAGE_kmod-veth=y
+        CONFIG_PACKAGE_libatomic=y
+        CONFIG_PACKAGE_libattr=y
+        CONFIG_PACKAGE_libavahi-dbus-support=y
+        CONFIG_PACKAGE_libcap=y
         CONFIG_PACKAGE_libcap-bin=y
         CONFIG_PACKAGE_libcap-bin-capsh-shell="/bin/sh"
+        CONFIG_PACKAGE_libcbor=y
+        CONFIG_PACKAGE_libdaemon=y
+        CONFIG_PACKAGE_libdbus=y
+        CONFIG_PACKAGE_libeudev=y
+        CONFIG_PACKAGE_libevent2=y
+        CONFIG_PACKAGE_libexpat=y
+        CONFIG_PACKAGE_libfido2=y
+        CONFIG_PACKAGE_libgmp=y
         CONFIG_PACKAGE_libltdl=y
         CONFIG_PACKAGE_liblua5.3=y
+        CONFIG_PACKAGE_liblzma=y
+        CONFIG_PACKAGE_liblzo=y
         CONFIG_PACKAGE_libparted=y
         CONFIG_PACKAGE_libruby=y
+        CONFIG_PACKAGE_libseccomp=y
+        CONFIG_PACKAGE_libssh=y
         CONFIG_PACKAGE_libstdcpp=y
         CONFIG_PACKAGE_libuv=y
         CONFIG_PACKAGE_libwebsockets-full=y
         CONFIG_PACKAGE_libyaml=y
         # CONFIG_PACKAGE_luci-app-accesscontrol is not set
-        # CONFIG_PACKAGE_luci-app-adguardhome_INCLUDE_binary is not set
+        CONFIG_PACKAGE_luci-app-adguardhome=y
         # CONFIG_PACKAGE_luci-app-arpbind is not set
         # CONFIG_PACKAGE_luci-app-autoreboot is not set
         # CONFIG_PACKAGE_luci-app-ddns is not set
         CONFIG_PACKAGE_luci-app-diskman=y
-        CONFIG_PACKAGE_luci-app-netdata=y
+        CONFIG_PACKAGE_luci-app-dockerman=y
         # CONFIG_PACKAGE_luci-app-nlbwmon is not set
         CONFIG_PACKAGE_luci-app-openclash=y
         CONFIG_PACKAGE_luci-app-passwall=y
         CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Haproxy=y
+        CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Hysteria=y
         CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ShadowsocksR_Libev_Client=y
         CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Libev_Client=y
         CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Libev_Server=y
@@ -142,20 +196,34 @@ jobs:
         CONFIG_PACKAGE_luci-app-passwall_Iptables_Transparent_Proxy=y
         # CONFIG_PACKAGE_luci-app-rclone_INCLUDE_rclone-ng is not set
         # CONFIG_PACKAGE_luci-app-rclone_INCLUDE_rclone-webui is not set
+        CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ChinaDNS_NG=y
+        CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Hysteria=y
         CONFIG_PACKAGE_luci-app-ttyd=y
-        # CONFIG_PACKAGE_luci-app-unblockmusic_INCLUDE_UnblockNeteaseMusic_Go is not set
+        # CONFIG_PACKAGE_luci-app-turboacc is not set
         # CONFIG_PACKAGE_luci-app-upnp is not set
         # CONFIG_PACKAGE_luci-app-vlmcsd is not set
         # CONFIG_PACKAGE_luci-app-vsftpd is not set
         # CONFIG_PACKAGE_luci-app-wol is not set
+        CONFIG_PACKAGE_luci-i18n-adguardhome-zh-cn=y
         CONFIG_PACKAGE_luci-i18n-diskman-zh-cn=y
-        CONFIG_PACKAGE_luci-i18n-netdata-zh-cn=y
+        CONFIG_PACKAGE_luci-i18n-dockerman-zh-cn=y
         CONFIG_PACKAGE_luci-i18n-passwall-zh-cn=y
         CONFIG_PACKAGE_luci-i18n-ttyd-zh-cn=y
+        CONFIG_PACKAGE_luci-lib-docker=y
         CONFIG_PACKAGE_luci-theme-atmaterial_new=y
+        CONFIG_PACKAGE_luci-theme-material=y
         # CONFIG_PACKAGE_miniupnpd is not set
-        CONFIG_PACKAGE_netdata=y
+        CONFIG_PACKAGE_mount-utils=y
+        CONFIG_PACKAGE_msgpack-c=y
         # CONFIG_PACKAGE_nlbwmon is not set
+        CONFIG_PACKAGE_openssh-client=y
+        CONFIG_PACKAGE_openssh-client-utils=y
+        CONFIG_PACKAGE_openssh-keygen=y
+        CONFIG_PACKAGE_openssh-moduli=y
+        CONFIG_PACKAGE_openssh-server=y
+        CONFIG_PACKAGE_openssh-sftp-avahi-service=y
+        CONFIG_PACKAGE_openssh-sftp-client=y
+        CONFIG_PACKAGE_openssh-sftp-server=y
         CONFIG_PACKAGE_parted=y
         CONFIG_PACKAGE_ruby=y
         CONFIG_PACKAGE_ruby-bigdecimal=y
@@ -168,17 +236,22 @@ jobs:
         CONFIG_PACKAGE_ruby-stringio=y
         CONFIG_PACKAGE_ruby-strscan=y
         CONFIG_PACKAGE_ruby-yaml=y
+        CONFIG_PACKAGE_runc=y
         CONFIG_PACKAGE_shadowsocks-libev-ss-local=y
         CONFIG_PACKAGE_shadowsocks-libev-ss-redir=y
         CONFIG_PACKAGE_sing-box=y
         CONFIG_PACKAGE_smartmontools=y
+        CONFIG_PACKAGE_sshtunnel=y
+        CONFIG_PACKAGE_tini=y
+        CONFIG_PACKAGE_tmate=y
         CONFIG_PACKAGE_trojan-plus=y
         CONFIG_PACKAGE_ttyd=y
         CONFIG_PACKAGE_unzip=y
         CONFIG_PACKAGE_v2ray-plugin=y
         # CONFIG_PACKAGE_vlmcsd is not set
         # CONFIG_PACKAGE_vsftpd-alt is not set
-        # CONFIG_PACKAGE_wol is not set
+        CONFIG_PACKAGE_xz=y
+        CONFIG_PACKAGE_xz-utils=y
         CONFIG_PARTED_READLINE=y
         CONFIG_SING_BOX_WITH_CLASH_API=y
         CONFIG_SING_BOX_WITH_DHCP=y
