--- a/.github/workflows/lede.yml
+++ b/.github/workflows/lede.yml
@@ -62,6 +62,19 @@ jobs:
     - name: 更新和安装软件包
       run: |
         cd lede
+        rm -f ./feeds.conf.default
+        touch ./feeds.conf.default
+        echo "src-git packages https://github.com/coolsnowwolf/packages" >> "feeds.conf.default"
+        echo "src-git luci https://github.com/coolsnowwolf/luci" >> "feeds.conf.default"
+        echo "#src-git luci https://github.com/coolsnowwolf/luci.git;openwrt-23.05" >> "feeds.conf.default"
+        echo "src-git routing https://github.com/coolsnowwolf/routing" >> "feeds.conf.default"
+        echo "src-git telephony https://github.com/openwrt/telephony.git;openwrt-23.05" >> "feeds.conf.default"
+        echo "src-git helloworld https://github.com/fw876/helloworld.git" >> "feeds.conf.default"
+        echo "#src-git oui https://github.com/zhaojh329/oui.git" >> "feeds.conf.default"
+        echo "#src-git video https://github.com/openwrt/video.git" >> "feeds.conf.default"
+        echo "#src-git targets https://github.com/openwrt/targets.git" >> "feeds.conf.default"
+        echo "#src-git oldpackages http://git.openwrt.org/packages.git" >> "feeds.conf.default"
+        echo "#src-link custom /usr/src/openwrt/custom-feed" >> "feeds.conf.default"
         ./scripts/feeds update -a
         ./scripts/feeds install -a
         ./scripts/feeds install -a
