--- a/.github/workflows/lede.yml
+++ b/.github/workflows/lede.yml
@@ -75,6 +75,10 @@ jobs:
         echo "#src-git targets https://github.com/openwrt/targets.git" >> "feeds.conf.default"
         echo "#src-git oldpackages http://git.openwrt.org/packages.git" >> "feeds.conf.default"
         echo "#src-link custom /usr/src/openwrt/custom-feed" >> "feeds.conf.default"
+        echo 'src-git helloworld https://github.com/fw876/helloworld' >>feeds.conf.default
+        sed -i '$a\src-git openclash https://github.com/vernesong/OpenClash' ./feeds.conf.default
+        echo "src-git passwall https://github.com/xiaorouji/openwrt-passwall.git;main" >> "feeds.conf.default"
+        echo "src-git passwall_packages https://github.com/xiaorouji/openwrt-passwall-packages.git;main" >> "feeds.conf.default"
         ./scripts/feeds update -a
         ./scripts/feeds install -a
         ./scripts/feeds install -a
@@ -82,11 +86,7 @@ jobs:
     - name: 常用配置修改
       run: |
         cd lede
-        git clone https://github.com/kenzok8/openwrt-packages package/zheng
-        git clone https://github.com/kenzok8/small package/zheng/passwall
-        rm -rf package/zheng/passwall/luci-app-passwall2 package/zheng/passwall/luci-app-ssr-plus package/zheng/passwall/luci-app-bypass
-        git clone https://github.com/fw876/helloworld package/zheng/ssrplus
-        git clone https://github.com/WukongMaster/luci-theme-opentomcat package/zheng/luci-theme-opentomcat
+        git clone https://github.com/WukongMaster/luci-theme-opentomcat.git package/luci-theme-opentomcat
         sed -i 's/KERNEL_PATCHVER:=6.6/KERNEL_PATCHVER:=6.12/g' ./target/linux/x86/Makefile
         sed -i "s/192.168.1.1/192.168.2.3/g" package/base-files/luci2/bin/config_generate
         sed -i "s/hostname='.*'/hostname='openwrt'/g" package/base-files/luci2/bin/config_generate
