--- a/.github/workflows/lede.yml
+++ b/.github/workflows/lede.yml
@@ -66,18 +66,13 @@ jobs:
         touch ./feeds.conf.default
         echo "src-git packages https://github.com/coolsnowwolf/packages" >> "feeds.conf.default"
         echo "src-git luci https://github.com/coolsnowwolf/luci" >> "feeds.conf.default"
-        echo "#src-git luci https://github.com/coolsnowwolf/luci.git;openwrt-23.05" >> "feeds.conf.default"
         echo "src-git routing https://github.com/coolsnowwolf/routing" >> "feeds.conf.default"
         echo "src-git telephony https://github.com/openwrt/telephony.git;openwrt-23.05" >> "feeds.conf.default"
-        echo "src-git helloworld https://github.com/fw876/helloworld.git" >> "feeds.conf.default"
-        echo "#src-git oui https://github.com/zhaojh329/oui.git" >> "feeds.conf.default"
-        echo "#src-git video https://github.com/openwrt/video.git" >> "feeds.conf.default"
-        echo "#src-git targets https://github.com/openwrt/targets.git" >> "feeds.conf.default"
-        echo "#src-git oldpackages http://git.openwrt.org/packages.git" >> "feeds.conf.default"
-        echo "#src-link custom /usr/src/openwrt/custom-feed" >> "feeds.conf.default"
+        echo 'src-git helloworld https://github.com/fw876/helloworld' >>feeds.conf.default
         sed -i '$a\src-git openclash https://github.com/vernesong/OpenClash' ./feeds.conf.default
         echo "src-git passwall https://github.com/xiaorouji/openwrt-passwall.git;main" >> "feeds.conf.default"
         echo "src-git passwall_packages https://github.com/xiaorouji/openwrt-passwall-packages.git;main" >> "feeds.conf.default"
+        echo "src-git zheng https://github.com/zjt37/zheng.git;main" >> "feeds.conf.default"
         ./scripts/feeds update -a
         ./scripts/feeds install -a
         ./scripts/feeds install -a
@@ -85,10 +80,9 @@ jobs:
     - name: 常用配置修改
       run: |
         cd lede
-        git clone https://github.com/WukongMaster/luci-theme-opentomcat package/luci-theme-opentomcat
+        sed -i 's/192.168.1.1/192.168.2.3/g' package/base-files/files/bin/config_generate
         sed -i 's/KERNEL_PATCHVER:=6.6/KERNEL_PATCHVER:=6.12/g' ./target/linux/x86/Makefile
-        sed -i "s/192.168.1.1/192.168.2.3/g" package/base-files/luci2/bin/config_generate
-        sed -i "s/hostname='.*'/hostname='openwrt'/g" package/base-files/luci2/bin/config_generate
+        sed -i 's/\"services\"/\"nas\"/g' feeds/luci/applications/luci-app-samba4/luasrc/controller/samba4.lua
   
     - name: 配置固件文件
       run: |
@@ -102,7 +96,7 @@ jobs:
         # CONFIG_GRUB_EFI_IMAGES is not set
         CONFIG_GRUB_IMAGES=y
         CONFIG_OPENSSH_LIBFIDO2=y
-        # CONFIG_PACKAGE_TURBOACC_INCLUDE_BBR_CCA is not set
+        CONFIG_PACKAGE_adguardhome=y
         CONFIG_PACKAGE_autossh=y
         CONFIG_PACKAGE_avahi-dbus-daemon=y
         CONFIG_PACKAGE_bash=y
@@ -113,11 +107,22 @@ jobs:
         CONFIG_PACKAGE_chinadns-ng=y
         CONFIG_PACKAGE_coreutils-nohup=y
         CONFIG_PACKAGE_dbus=y
+        # CONFIG_PACKAGE_etherwake is not set
+        CONFIG_PACKAGE_geoview=y
+        # CONFIG_PACKAGE_grub2-efi is not set
         CONFIG_PACKAGE_haproxy=y
-        CONFIG_PACKAGE_hysteria=y
         CONFIG_PACKAGE_ipt2socks=y
+        CONFIG_PACKAGE_iptables-mod-iprange=y
+        CONFIG_PACKAGE_iptables-mod-socket=y
         CONFIG_PACKAGE_kmod-inet-diag=y
+        CONFIG_PACKAGE_kmod-ipt-iprange=y
+        # CONFIG_PACKAGE_kmod-ipt-offload is not set
+        CONFIG_PACKAGE_kmod-ipt-socket=y
         CONFIG_PACKAGE_kmod-netlink-diag=y
+        # CONFIG_PACKAGE_kmod-nf-conntrack-netlink is not set
+        # CONFIG_PACKAGE_kmod-nf-flow is not set
+        CONFIG_PACKAGE_kmod-nf-socket=y
+        # CONFIG_PACKAGE_kmod-tcp-bbr is not set
         CONFIG_PACKAGE_libatomic=y
         CONFIG_PACKAGE_libavahi-dbus-support=y
         CONFIG_PACKAGE_libcap=y
@@ -133,7 +138,6 @@ jobs:
         CONFIG_PACKAGE_libgmp=y
         CONFIG_PACKAGE_libltdl=y
         CONFIG_PACKAGE_liblua5.3=y
-        CONFIG_PACKAGE_liblzma=y
         CONFIG_PACKAGE_libparted=y
         CONFIG_PACKAGE_libruby=y
         CONFIG_PACKAGE_libssh=y
@@ -143,7 +147,6 @@ jobs:
         CONFIG_PACKAGE_libyaml=y
         # CONFIG_PACKAGE_luci-app-accesscontrol is not set
         CONFIG_PACKAGE_luci-app-adguardhome=y
-        CONFIG_PACKAGE_luci-app-argone-config=y
         # CONFIG_PACKAGE_luci-app-arpbind is not set
         # CONFIG_PACKAGE_luci-app-autoreboot is not set
         # CONFIG_PACKAGE_luci-app-ddns is not set
@@ -151,8 +154,8 @@ jobs:
         # CONFIG_PACKAGE_luci-app-nlbwmon is not set
         CONFIG_PACKAGE_luci-app-openclash=y
         CONFIG_PACKAGE_luci-app-passwall=y
+        CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Geoview=y
         CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Haproxy=y
-        CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Hysteria=y
         CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ShadowsocksR_Libev_Client=y
         CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Libev_Client=y
         CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Libev_Server=y
@@ -164,22 +167,26 @@ jobs:
         CONFIG_PACKAGE_luci-app-passwall_Iptables_Transparent_Proxy=y
         # CONFIG_PACKAGE_luci-app-rclone_INCLUDE_rclone-ng is not set
         # CONFIG_PACKAGE_luci-app-rclone_INCLUDE_rclone-webui is not set
-        CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ChinaDNS_NG=y
-        CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Hysteria=y
         CONFIG_PACKAGE_luci-app-ttyd=y
         # CONFIG_PACKAGE_luci-app-turboacc is not set
+        # CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_BBR_CCA is not set
+        # CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_OFFLOADING is not set
+        # CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_PDNSD is not set
+        # CONFIG_PACKAGE_luci-app-unblockmusic_INCLUDE_UnblockNeteaseMusic_Go is not set
         # CONFIG_PACKAGE_luci-app-upnp is not set
         # CONFIG_PACKAGE_luci-app-vlmcsd is not set
         # CONFIG_PACKAGE_luci-app-vsftpd is not set
         # CONFIG_PACKAGE_luci-app-wol is not set
         CONFIG_PACKAGE_luci-i18n-adguardhome-zh-cn=y
-        CONFIG_PACKAGE_luci-i18n-argone-config-zh-cn=y
         CONFIG_PACKAGE_luci-i18n-diskman-zh-cn=y
         CONFIG_PACKAGE_luci-i18n-passwall-zh-cn=y
         CONFIG_PACKAGE_luci-i18n-ttyd-zh-cn=y
-        CONFIG_PACKAGE_luci-theme-opentomcat=y
         CONFIG_PACKAGE_luci-theme-atmaterial_new=y
+        CONFIG_PACKAGE_luci-theme-kucat=y
+        CONFIG_PACKAGE_luci-theme-opentomcat=y
+        # CONFIG_PACKAGE_miniupnpd is not set
         CONFIG_PACKAGE_msgpack-c=y
+        # CONFIG_PACKAGE_nlbwmon is not set
         CONFIG_PACKAGE_openssh-client=y
         CONFIG_PACKAGE_openssh-client-utils=y
         CONFIG_PACKAGE_openssh-keygen=y
@@ -189,6 +196,7 @@ jobs:
         CONFIG_PACKAGE_openssh-sftp-client=y
         CONFIG_PACKAGE_openssh-sftp-server=y
         CONFIG_PACKAGE_parted=y
+        # CONFIG_PACKAGE_pdnsd-alt is not set
         CONFIG_PACKAGE_ruby=y
         CONFIG_PACKAGE_ruby-bigdecimal=y
         CONFIG_PACKAGE_ruby-date=y
@@ -210,8 +218,9 @@ jobs:
         CONFIG_PACKAGE_ttyd=y
         CONFIG_PACKAGE_unzip=y
         CONFIG_PACKAGE_v2ray-plugin=y
-        CONFIG_PACKAGE_xz=y
-        CONFIG_PACKAGE_xz-utils=y
+        # CONFIG_PACKAGE_vlmcsd is not set
+        # CONFIG_PACKAGE_vsftpd-alt is not set
+        # CONFIG_PACKAGE_wol is not set
         CONFIG_PARTED_READLINE=y
         CONFIG_SING_BOX_WITH_CLASH_API=y
         CONFIG_SING_BOX_WITH_DHCP=y
@@ -227,17 +236,7 @@ jobs:
         CONFIG_boost-runtime-shared=y
         CONFIG_boost-static-and-shared-libs=y
         CONFIG_boost-variant-release=y
-        CONFIG_PACKAGE_etherwake=y
-        CONFIG_PACKAGE_grub2-efi=y
-        CONFIG_PACKAGE_kmod-ipt-offload=y
-        CONFIG_PACKAGE_kmod-nf-conntrack-netlink=y
-        CONFIG_PACKAGE_kmod-nf-flow=y
-        CONFIG_PACKAGE_kmod-tcp-bbr=y
-        CONFIG_PACKAGE_miniupnpd=y
-        CONFIG_PACKAGE_nlbwmon=y
-        CONFIG_PACKAGE_vlmcsd=y
-        CONFIG_PACKAGE_vsftpd-alt=y
-        CONFIG_VSFTPD_USE_UCI_SCRIPTS=y
+        # CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_SHORTCUT_FE_CM is not set
         EOF
         sed -i 's/^[ \t]*//g' ./.config
         make defconfig
