--- a/.github/workflows/lede.yml
+++ b/.github/workflows/lede.yml
@@ -81,6 +81,7 @@ jobs:
       run: |
         cd lede
         sed -i 's/192.168.1.1/192.168.2.3/g' package/base-files/files/bin/config_generate
+        sed -i "s/hostname='.*'/hostname='openwrt'/g" package/base-files/files/bin/config_generate
         sed -i 's/KERNEL_PATCHVER:=6.6/KERNEL_PATCHVER:=6.12/g' ./target/linux/x86/Makefile
         sed -i 's/\"services\"/\"nas\"/g' feeds/luci/applications/luci-app-samba4/luasrc/controller/samba4.lua
   
@@ -182,7 +183,6 @@ jobs:
         CONFIG_PACKAGE_luci-i18n-passwall-zh-cn=y
         CONFIG_PACKAGE_luci-i18n-ttyd-zh-cn=y
         CONFIG_PACKAGE_luci-theme-atmaterial_new=y
-        CONFIG_PACKAGE_luci-theme-kucat=y
         CONFIG_PACKAGE_luci-theme-opentomcat=y
         # CONFIG_PACKAGE_miniupnpd is not set
         CONFIG_PACKAGE_msgpack-c=y
