--- a/.github/workflows/sync-folder.yml
+++ b/.github/workflows/sync-folder.yml
@@ -28,8 +28,11 @@ jobs:
         run: |
           git clone https://github.com/TanZhiwen2001/luci-app-adguardhome.git
           cp -r ./luci-app-adguardhome/luci-app-adguardhome/* ./zheng/luci-app-adguardhome/
+
+          
+      - name: Commit and push changes to target repository
+        run: |
           cd zheng
-          cd luci-app-adguardhome
-          ls
-
-
+          git add .
+          git commit -m "Sync folder from source repository"
+          git push origin main
